# MemHub

./: LICENSE  README.md  main.py  run.sh
libMemHub/client/: CMakeLists.txt
libMemHub/client/include/: client.h  client_api.h  util.h
libMemHub/client/src/: client.cpp  client_api.cpp
libMemHub/configure/: grpc_configure.cfg
libMemHub/configure/include/: configuration.h
libMemHub/configure/src/: configuration.cpp
libMemHub/local_communication/include/: ipc_queue.h  ipc_shm.h  msg_info.h  semaphore.h  thread_queue.h  util.h
libMemHub/local_communication/src/: ipc_queue.cpp  ipc_shm.cpp  semaphore.cpp  thread_queue.cpp
libMemHub/server/: CMakeLists.txt
libMemHub/server/include/manager/: data_manager.h  filesystem_backend.h  i_data_manager.h  memory_backend.h
libMemHub/server/include/random_sampler/: i_sampler.h  sampler.h
libMemHub/server/include/remote_communicator/: communicator_backend.h  i_communicator_backend.h  reply_rpc.h  request_rpc.h
libMemHub/server/include/remote_communicator/protos/: DBMF.proto
libMemHub/server/include/utils/: cs_port.h  server_api.h  util.h
libMemHub/server/src/manager/: data_manager.cpp  filesystem_backend.cpp  memory_backend.cpp
libMemHub/server/src/random_sampler/: sampler.cpp
libMemHub/server/src/remote_communicator/: communicator_backend.cpp  reply_rpc.cpp  request_rpc.cpp
libMemHub/server/src/utils/: cs_port.cpp  server_api.cpp
torchLoader/: dataloader.py  distributed.py  folder.py  loader.py  worker.py
